fixed overflow y on projects page

--- a/components/ProjectsComps/Projects.module.css
+++ b/components/ProjectsComps/Projects.module.css
@@ -120,10 +120,11 @@
 @media (max-width: 987px) {
   .pTitle {
     text-align: center;
-    max-width: 80%;
+    max-width: 85%;
   }
   .block {
     width: 90vw;
+    width: 85vw;
     margin: 3em;
     /* margin-bottom: 0; */
   }
@@ -161,7 +162,7 @@
     margin-bottom: -15vh;
   }
   .p {
-    min-width: 90vw;
+    min-width: 85vw;
     text-align: center;
   }
   .div {
